[project]
name = "live-preview"
description = ""
version = "0.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/thot-experiment/comfy-live-preview"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "thot-experiment"
DisplayName = "comfy-live-preview"
Icon = ""
